--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
@@ -123,6 +124,41 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "e2e/tsconfig.e2e.json",
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "ad-button-slide": {
+      "root": "projects/ad-button-slide",
+      "sourceRoot": "projects/ad-button-slide/src",
+      "projectType": "library",
+      "prefix": "ad",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ad-button-slide/tsconfig.lib.json",
+            "project": "projects/ad-button-slide/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ad-button-slide/src/test.ts",
+            "tsConfig": "projects/ad-button-slide/tsconfig.spec.json",
+            "karmaConfig": "projects/ad-button-slide/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ad-button-slide/tsconfig.lib.json",
+              "projects/ad-button-slide/tsconfig.spec.json"
+            ],
             "exclude": [
               "**/node_modules/**"
             ]
