--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:lib": "ng-packagr -p projects/ad-button-slide/ng-package.json && cp README.md dist/",
+    "deploy": "npm run build && npm publish dist/ad-button-slide",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
