--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build:lib": "ng-packagr -p projects/ad-button-slide/ng-package.json && cp README.md dist/",
-    "deploy": "npm run build && npm publish dist/ad-button-slide",
+    "deploy:lib": "npm run build:lib && npm publish dist/ad-button-slide",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
