--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:lib": "ng-packagr -p projects/ad-button-slide/ng-package.json && cp README.md dist/",
+    "build:lib": "ng-packagr -p projects/ad-button-slide/ng-package.json && cp README.md dist/ad-button-slide/",
     "deploy:lib": "npm run build:lib && npm publish dist/ad-button-slide",
     "test": "ng test",
     "lint": "ng lint",
